# ANa

./: .gitignore  LOGBOOK.md  Pipfile  README.md  dev.dockerfile  dockerfile  env  package-lock.json  package.json  project.conf  todos.md
agent/: .gitignore  Pipfile  dockerfile  entrypoint.sh
agent/agent/: __main__.py  agent.py  dev.dockerfile
agent/scripts/: agent.sh
ana/: .gitignore  preprocessing.py
ana-api/: Pipfile  dockerfile  requirements.txt
ana-api/api/: api.py  chat.py
ana-api/src/: ana.py
ana-auto/: .gitignore  Pipfile  README.md  prompt-template.txt  requirements.txt
ana-auto/auto/: automic.py  config.py
ana-cli/: .anarc  ana.sh  build.sh  chat.sh  core.sh  features.conf  init.sh  start.sh
ana-cli/cli/: .anarc  ana.sh  deploy.sh  dev.sh  doctor.sh  push.sh
ana-cli/infra/: infra.sh  setup.sh  teardown.sh  template.certs.cfg
ana-core/: .gitignore  CMakeLists.txt  Pipfile  core.proto  dev.dockerfile  dockerfile  features.yaml  requirements.txt  setup.cfg
ana-core/core/: __init__.py  __main__.py  ana.py  codec.py  model.py  reader.py  serve.py  tokenizer.py  train.py
ana-core/core/language/: __init__.py  ana.py  codec.py  coretypes.py  dataloader.py  model.py  preprocessing.py  reader.py  tokenizer.py  utils.py
ana-core/core/language/models/: ngram.py
ana-core/core/models/: __init__.py  bigram.py
ana-core/core/rpc/: __main__.py  client.py  core_pb2.py  core_pb2.pyi  core_pb2_grpc.py  server.py
ana-core/core/sentc/: preprocessing.cpp  preprocessing.hpp  senti.cpp
ana-core/experiments/: ngram_dnn.ipynb
ana-core/notebooks/: eda.ipynb  model.ipynb  senti-model.ipynb
ana-core/src/: ana.py
ana-core/tests/: codec_test.py  model_test.py  reader_test.py  tokenizer_test.py
ana-core/tests/language/: preprocessing_test.py
ana-ui/: package.json
cli/: .anarc  .gitignore  ana.sh  build.sh  chat.sh  core.sh  data.sh  dev.sh  init.sh  project.conf  serve.sh  train.sh
config/infrastructure/: template.azure.config
core/: Pipfile  __main__.py  dockerfile  model.py  setup.cfg
core/core/: __main__.py  model.py  utils.py
gibber/: gibber.py
gibber-api/: dockerfile
gibber-api/src/: gibber.py
gibber-ui/: dockerfile  package-lock.json  package.json  svelte.config.js
gibber-ui/scripts/: build.sh
logs/: dev-error-log.txt
model/: Pipfile  dockerfile  entrypoint.sh
model/notebooks/: Untitled.ipynb  model.ipynb
model/scripts/: model.sh
model/src/: main.py  (+1 more)
notebooks/: eda.ipynb  model.ipynb  senti-model.ipynb
scripts/: .anarc  ana.sh  build.sh  connect.sh  gibbe-deploy.sh  gibber-build.sh  gibber-connect.sh  gibber-deploy.sh  gibber-init.sh  gibber-start.sh  gibber.sh  gibberrc  stop.sh
tests/: model_test.py
utils/: download-data  gibber
(+19 files in other folders)
